--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,6 @@
-body {
-    background-color: skyblue;
+@import "~bootstrap/dist/css/bootstrap.min.css";
+
+body{
+    padding: 0;
+    margin: 0;
 }
