show selected list works

--- a/templates/main/choices.html.twig
+++ b/templates/main/choices.html.twig
@@ -17,7 +17,7 @@
                         </thead>
                         <tbody>
                             {% for resturant in resturants %}
-                                <tr id = "single-resturant" data-id="{{ resturant.id }}">
+                                <tr id = "single-resturant" data-id="{{ resturant.name }}">
                                     <td>{{ resturant.name }}</td>
                                     <td>{{ resturant.address }}</td>
                                     <td>{{ resturant.telefonnummer }}</td>
