--- a/templates/main/categories_list_form.html.twig
+++ b/templates/main/categories_list_form.html.twig
@@ -1,3 +1,4 @@
+<h1 class="m-2">Resturants Categories</h1>
 <form id="categoryForm" method="POST" action="{{ path('get_resturant') }}"> 
   <div class="mb-3">
     <div class="form-group">
@@ -10,6 +11,7 @@
   </div>
   <input type="hidden" id="selectedCategoryIds" name="selectedCategoryIds">
   <button type="submit" class="btn btn-primary">Submit</button>
+  <a href="{{ path('selected_choices_list') }}" class="btn btn-primary">Selected Choices List</a>
 </form>
 
 <script>
