--- a/templates/main/selected_choices_list.html.twig
+++ b/templates/main/selected_choices_list.html.twig
@@ -8,31 +8,17 @@
         <table class="table">
         <thead>
             <tr>
-            <th scope="col">#</th>
-            <th scope="col">First</th>
-            <th scope="col">Last</th>
-            <th scope="col">Handle</th>
+            <th scope="col">Timestamp</th>
+            <th scope="col">Resturant</th>
             </tr>
         </thead>
         <tbody>
+        {% for selectedChoice in selectedChoices %}
             <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
+                <td>{{selectedChoice.Timestamp | date('Y-m-d H:i:s')}}</td>
+                <td>{{selectedChoice.resturant}}</td>
             </tr>
-            <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>@fat</td>
-            </tr>
-            <tr>
-            <th scope="row">3</th>
-            <td>Larry</td>
-            <td>the Bird</td>
-            <td>@twitter</td>
-            </tr>
+        {% endfor %}
         </tbody>
         </table>
 
