--- a/templates/main/selected_choices_list.html.twig
+++ b/templates/main/selected_choices_list.html.twig
@@ -4,6 +4,7 @@
     {% include 'main/header.html.twig' with {'number': temp} %}
 
     <div class="container-fluid">
+    <h1 class="m-2">Selection History</h1>
 
         <table class="table">
         <thead>
