--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,6 +1,3 @@
-@import "~bootstrap/dist/css/bootstrap.min.css";
-
-body{
-    padding: 0;
-    margin: 0;
+body {
+    background-color: skyblue;
 }
